--- a/a/ar/art/articlecity.com.html
+++ b/a/ar/art/articlecity.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articlecity.com privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612045014id_/http%3A//www.articlecity.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlecity.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204185246id_/http%3A//www.articlecity.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>ArticleCity.com - Privacy Policy</title>
@@ -63,8 +63,8 @@ i=u+x+b+id+'&m=1&f=a&v=1.2&c='+f+'&j='+p+'&r='+e;d='ameborder=0 scrolling=no>';
 u = '<a  hr'+'ef="'+u+'/cli'+'ck.here?sid='+id+'&m=1&c='+f+'"  target="_top">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 fr'+d);if(o!=1){
 dc.writeln(u+'<i'+'mg sr'+'c="'+i+'&d=n"'+l+c);}dc.writeln('</iframe>'); // -->
-</script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=5449&amp;m=1&amp;f=a&amp;v=1.2&amp;c=1334&amp;j=800|600|||||N|Y|&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=5449&m=1&c=1334"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=5449&m=1&f=a&v=1.2&c=1334&j=800|600|||||N|Y|&r=&d=n" width=468 height=60 border=0  alt="Click"></a>
+</script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=5449&amp;m=1&amp;f=a&amp;v=1.2&amp;c=1472&amp;j=800|600|||||N|Y|&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=5449&m=1&c=1472"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=5449&m=1&f=a&v=1.2&c=1472&j=800|600|||||N|Y|&r=&d=n" width=468 height=60 border=0  alt="Click"></a>
 </iframe>
 <noscript><a 
 href="http://media.fastclick.net/w/click.here?sid=5449&m=1&c=1"  target="_top">
@@ -103,12 +103,6 @@ href="http://media.fastclick.net/w/click.here?sid=5449&m=1&c=1"  target="_top">
 </map>
 <p><img ismap="" usemap="#mainmenu" src="images/menu_articles.gif" width="124" height="340" border="0"><br>
 
-</p><form method="post" action="cgi-bin/search.cgi">
-<p><b>Keyword Search</b><br>
-<input type="text" name="words" size="12"><br>
-<input type="submit" value="Search"><br>
-</p></form>
-
 <map name="sitemenu">
 <area shape="rect" coords="13, 28, 85, 43" href="/search.shtml">
 <area shape="rect" coords="13, 44, 85, 59" href="/article_submission.shtml">
@@ -119,11 +113,22 @@ href="http://media.fastclick.net/w/click.here?sid=5449&m=1&c=1"  target="_top">
 <area shape="rect" coords="13, 124, 85, 139" href="/sitemap.shtml">
 <area shape="rect" coords="13, 140, 85, 155" href="/index.shtml">
 </map>
-<p><img ismap="" usemap="#sitemenu" src="images/menu_site.gif" width="124" height="160" border="0"><br>
+</p><p><img ismap="" usemap="#sitemenu" src="images/menu_site.gif" width="124" height="160" border="0"><br>
+
+</p><form method="post" action="/cgi-bin/search.cgi">
+<p><b>Keyword Search</b><br>
+<input type="text" name="words" size="12"><br>
+<table cellpadding="0" cellspacing="0" border="0"><tbody><tr><td>
+<small><input type="radio" name="sf1" value="The_Title" checked=""> Article Title</small><br>
+<small><input type="radio" name="sf1" value="The_Author"> Author's Name</small><br>
+<small><input type="radio" name="sf1" value="The_Gist"> Article Body</small><br>
+</td></tr></tbody></table>
+<input class="sm" type="submit" value="Search"><br>
+</p></form>
 
 
 <br><br><br>
-</p><p class="small">ArticleCity.com<br>was featured on:</p>
+<p class="small">ArticleCity.com<br>was featured on:</p>
 <p><a href="http://www.sitepronews.com" target="new"><img src="http://www.articlecity.com/bannerimages/spnsod.gif" width="75" height="100" border="0" alt="This site was Featured Site of the Day at SiteProNews.com!" hspace="3"></a><br>
 
 </p><p><a href="http://www.webwowzer.com/" target="new"><img src="http://www.articlecity.com/bannerimages/webwowzer.gif" width="88" height="31" border="0" alt="This site was Featured Site of the Day at webWOWzer!" hspace="3"></a><br>
@@ -237,12 +242,32 @@ google_ad_width = 120;
 google_ad_height = 600;
 google_ad_format = "120x600_as";
 google_ad_channel ="";
-google_ad_type = "text_image";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
-</td>
+<p><script type="text/javascript"><!--
+google_ad_client = "pub-2630580098714716";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_ad_channel ="";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+
+</p></td>
 
 </tr></tbody></table>
 
@@ -257,17 +282,21 @@ google_ad_type = "text_image";
 
 
 </p><p></p><hr width="600" size="1" noshade="">
+<p class="small">Disclaimer: The information presented and opinions expressed herein are those of the authors<br>
+and do not necessarily represent the views of ArticleCity.com and/or its partners.
+</p><p></p><hr width="600" size="1" noshade="">
 
 <table width="600" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td>
 
 <p class="small" align="center">
-<a class="small" href="/index.shtml">Home</a> || 
 <a class="small" href="/article_submission.shtml">Submit Article</a> || 
+<a class="small" href="http://articlecity.prwebdirect.com" target="new">Submit Press Release</a> || 
 <a class="small" href="http://www.blogwidow.com" target="new">Blogs</a> || 
 <a class="small" href="/privacy.shtml">Privacy Policy</a> || 
 <a class="small" href="/terms.shtml">Terms of Use</a><br>
 
+<a class="small" href="/index.shtml">Home</a> || 
 <a class="small" href="/cgi-bin/articles.cgi">List All Articles</a> || 
 <a class="small" href="/link.shtml">Link To Us</a> || 
 <a class="small" href="/sitemap.shtml">Site Map</a> || 
