--- a/g/ge/gee/geekzone.co.nz.html
+++ b/g/ge/gee/geekzone.co.nz.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the geekzone.co.nz privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607025839id_/http%3A//geekzone.co.nz/content.asp%3Fcontentid%3D105) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geekzone.co.nz privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204185509id_/http%3A//www.geekzone.co.nz/content.asp%3Fcontentid%3D105) for the most accurate reproduction.-->
 
 <html><head>
 <title>Geekzone, mobile forums</title>
@@ -8,7 +8,7 @@
 <meta name="description" content="A portal for wireless and handheld users">
 <meta name="keywords" content="pocket pc,smartphone,bluetooth,bluetooth guide,wireless,handheld,new zealand,wellington,auckland,palm,wi-fi,gsm,gprs,cdma,symbian,nokia,ericsson,hp,ipaq,bluetooth guides,sony ericsson,vodafone,telecom,3G,2.5G">
 <meta name="ROBOTS" content="NOARCHIVE">
-<link rel="stylesheet" type="text/css" href="/default4.css">
+<link rel="stylesheet" type="text/css" href="default4.css">
 <script language="JavaScript">
 <!--
 function janela(url, name, w, h) {
@@ -32,7 +32,8 @@ function janela(url, name, w, h) {
 <table cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%">
 	<tbody><tr>
 		<td style="{text-align:left;vertical-align:middle;}">
-			<a href="default.asp"><img src="/images/geekzone-new-logo.gif" hspace="10" border="0" alt="Geekzone, mobile forums, bluetooth guide, wireless and mobility"></a>
+			<a href="default.asp">
+			<img src="/images/geekzone-new-logo.gif" hspace="10" border="0" alt="Geekzone, mobile forums, bluetooth guide, wireless and mobility"></a>
 		</td> 
 		<td style="{text-align:center;vertical-align:middle;}">
 			<table>
@@ -42,7 +43,7 @@ function janela(url, name, w, h) {
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Geekzone&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Geekzone&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=15995997700.7479866903502923"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Geekzone&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=15996010850.15308962596015596"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=Geekzone&adSpace=ROS&size=468x60&requestID=1654639689" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=Geekzone&adSpace=ROS&size=468x60&requestID=1654639689" 
@@ -89,6 +90,9 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='content.asp?contenttypeid=4'">
 		<a class="menuFont" href="content.asp?contenttypeid=4"><center>Software</center></a>
 	</td>
+	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='content.asp?contenttypeid=11'">
+		<a class="menuFont" href="content.asp?contenttypeid=11"><center>Blog</center></a>
+	</td>
 	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='/content.asp?contentid=449'">
 		<a class="menuFont" href="/content.asp?contentid=449"><center>Bluetooth<br>Guides</center></a>
 	</td>
@@ -96,14 +100,17 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 		<a class="menuFont" href="submit.asp"><center>Submit<br>links</center></a>
 	</td>
 	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='handango_code.asp'">
-		<a class="menuFont" href="handango_code.asp"><center>Handango Discount Code</center></a>
+		<a class="menuFont" href="handango_code.asp"><center>Geekzone Software Store</center></a>
+	</td>
+	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='handango_code.asp'">
+		<a class="menuFont" href="http://geekzone.pricegrabber.com/home_catpage.php/catzero=39"><center>Compare PDA prices</center></a>
 	</td>
 	<td width="1%" class="menuTD" onmouseover="this.className='menuTDover'" onmouseout="this.className='menuTD'" onclick="window.location.href='contact.asp'">
 		<a class="menuFont" href="contact.asp"><center>Contact</center></a>
 	</td>
 	<form action="goto.asp" method="get"></form>
 	<td class="menuTD" style="{text-align:right;}">
-		Please <a href="http://www.geekzone.co.nz/login.asp?action=logout"><b>login</b></a> or <a href="http://www.geekzone.co.nz/register.asp"><b>register</b></a><br>07/06/2004 15:07:58 NZST (GMT+12)
+		Please <a href="http://www.geekzone.co.nz/login.asp?action=logout"><b>login</b></a> or <a href="http://www.geekzone.co.nz/register.asp"><b>register</b></a><br>05/12/2004 07:59:47 NZST (GMT+12)
 	</td>
 	
 </tr>
@@ -130,30 +137,33 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 <tbody><tr>
 <td>
 <br>
-<script type="text/javascript"><!--
-google_ad_client = "pub-3841542980804279";
-google_alternate_ad_url = "http://www.geekzone.co.nz/tribal.asp";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_channel ="5704601276";
-google_ad_type = "text";
-google_color_border = ["EFEFEF","E0FFE3","FDFFCA","DDAAAA"];
-google_color_bg = ["EFEFEF","E0FFE3","FDFFCA","ECF8FF"];
-google_color_link = ["000099","0000CC","0000CC","0033FF"];
-google_color_url = ["000099","008000","008000","0033FF"];
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-<br><br>
 <h1>Privacy Policy</h1>
 <a href="content.asp?contenttypeid=1"><i>General Information</i></a>
-:&nbsp;<a href="content.asp?catid=57"><i></i></a>
-:&nbsp;<a href="content.asp?catid=60"><i>Privacy</i></a>, posted 17/01/2003 08:10:00 NZ
+:&nbsp;<a href="content.asp?catid=58"><i>About Us</i></a>
+:&nbsp;<a href="content.asp?catid=83"><i>Site information</i></a>, posted 17/01/2003 08:10:00 NZ
 <br>
 
 <br><br>
+
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-3841542980804279";
+			google_alternate_ad_url = "http://www.geekzone.co.nz/tribal.asp";
+			google_ad_width = 728;
+			google_ad_height = 90;
+			google_ad_format = "728x90_as";
+			google_ad_channel ="5704601276";
+			google_ad_type = "text";
+			google_color_border = "B0C4DE";
+			google_color_bg = "B0C4DE";
+			google_color_link = "000099";
+			google_color_url = "008000";
+			google_color_text = "000000";
+			//--></script>
+			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script>
+
+<br>
+<hr>
 <b>Privacy Statement for Geekzone</b>
 <br><br>
 Geekzone has created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses our information gathering and dissemination practices for this website.
@@ -170,7 +180,9 @@ We use Tribal Fusion, Burst Media, and Buds Inc to serve ads when you visit our 
 <br><br>
 </td>
 <td rowspan="2" style="{width:170;text-align:center}">
-<center><a href="click_thru_banner.asp?banner_id=131" target="_blank"><img src="/images/banners/dealer_150_soft.gif" height="130" width="150" alt="Ectaco: dictionary and translation software for Pocket PC"></a></center>
+<center><a href="http://www.boxwave.com?kbid=1012&amp;img=boxwave2.gif" target="_blank">
+<img src="http://www.boxwave.com/affiliates/banners/boxwave2.gif" border="0"></a>
+<img src="http://www.boxwavelinks.com/showban.asp?id=1012&amp;img=boxwave2.gif" border="0"></center>
 <br>
 <!-- Shop online -->
 
@@ -179,7 +191,7 @@ We use Tribal Fusion, Burst Media, and Buds Inc to serve ads when you visit our 
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=Geekzone&adSpace=ROS&size=160x600&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Geekzone&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=15995997770.9958793612039267"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=Geekzone&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=15996010990.3068098480841792"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=Geekzone&adSpace=ROS&size=160x600&requestID=385311390" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=Geekzone&adSpace=ROS&size=160x600&requestID=385311390" 
@@ -195,20 +207,69 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 <table>
 	<tbody><tr>
 		<td colspan="3">
-<hr>
-
-<br>
-<img src="/images/speaker.gif">Add or read <a href="content.asp?contentid=105#comments"><b>comments</b></a> to this article.
-<br>
-<img src="/images/email.gif"><a href="email.asp?contentid=105&amp;shortdesc=Privacy+Policy"><b>Send</b></a> this link as an e-mail.
-<br>
-<img src="/images/sms.gif"><a href="smsarticle.asp?contentid=105"><b>Send</b></a> this link as a SMS.
-<hr>
-<br>
+			<hr>
+			
+			<br>
+			<img src="/images/speaker.gif">Add or read <a href="content.asp?contentid=105#comments"><b>comments</b></a> to this article.
+			<br>
+			<img src="/images/email.gif"><a href="email.asp?contentid=105&amp;shortdesc=Privacy+Policy"><b>Send</b></a> this link as an e-mail.
+			<br>
+			<img src="/images/sms.gif"><a href="smsarticle.asp?contentid=105"><b>Send</b></a> this link as a SMS.
+			<hr>
 		</td>
 	</tr>	
+	<tr>
+		<td colspan="3">
+			<br>
+		</td>
+	</tr>
 <!-- Related -->
+					
+		<tr>
+			<td class="dataTD" colspan="2">
+				Other articles related to category <i>General Information</i>
+				:&nbsp;<i>About Us</i>
+				:&nbsp;<i>Site information</i>
+				<br><br>
 
+					<a href="content.asp?contentid=1516">Geekzone mobile edition</a><br>
+
+					<a href="content.asp?contentid=1046">Forum usage guidelines</a><br>
+
+					<a href="content.asp?contentid=925">Advertising, sponsoring and reviews on Geekzone</a><br>
+
+					<a href="content.asp?contentid=684">Our sources and how to link and use Geekzone content in your site</a><br>
+
+				<br>
+			</td>
+<!-- Google Ads -->
+		<td class="dataTD" colspan="1">
+
+<script type="text/javascript"><!--
+google_ad_client = "pub-3841542980804279";
+google_alternate_ad_url = "http://www.geekzone.co.nz/tribal15.asp";
+google_ad_width = 300;
+google_ad_height = 250;
+google_ad_format = "300x250_as";
+google_ad_channel ="5407228560";
+google_ad_type = "text_image";
+google_color_border = "EFEFEF";
+google_color_bg = "EFEFEF";
+google_color_link = "000099";
+google_color_url = "000099";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+		</td>
+<!-- End Google Ads -->
+		</tr>
+		<tr>
+			<td colspan="3">
+				<br>
+			</td>
+		</tr>
 
 <!-- End Related -->
 <!-- News -->
@@ -223,13 +284,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <tr>
 <td class="dataTD">
-<a href="content.asp?contentid=2878">An Apple iPhone by Sony Ericsson? Not quite</a>...
+<a href="content.asp?contentid=3762">HHP Dolphin 7900 Pocket PC available from December</a>...
 <br><br>
-<a href="content.asp?contentid=2874">StanaPhone launches free telephone services using VoIP</a>...
+<a href="content.asp?contentid=3761">ATP announces 2GB SD flash cards</a>...
 <br><br>
-<a href="content.asp?contentid=2872">New JAVOSkin for Pocket PC Phone Edition</a>...
+<a href="content.asp?contentid=3760">Toshiba launches e830 Pocket PC with VGA screen in New Zealand</a>...
 <br><br>
-<a href="content.asp?contentid=2870">McDonald's and Sony in music deal</a>...
+<a href="content.asp?contentid=3759">More trojan programs showing up for the Symbian smartphones</a>...
+<br><br>
+<a href="content.asp?contentid=3758">Telefónica Móviles releases the TSM 520 Windows Mobile Smartphone</a>...
 <br><br>
 
 </td>
@@ -249,13 +312,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <tr>
 <td class="dataTD">
-<a href="content.asp?contentid=2785">How to connect your palmOne Zire 72 to GPRS using a Bluetooth mobile</a>...
+<a href="content.asp?contentid=3703">Using a Pocket PC CDMA 1x or CDMA EV-DO to connect a laptop to the Internet</a>...
 <br><br>
-<a href="content.asp?contentid=2784">How to Hotsync your palmOne Zire 72 over Bluetooth</a>...
+<a href="content.asp?contentid=3653">T3G: Telecom New Zealand 3G service</a>...
 <br><br>
-<a href="content.asp?contentid=2771">What consequences the market could expect if Dell decided to move and buy palmOne</a>...
+<a href="content.asp?contentid=3428">Some reasons to consider (or not) a Pocket PC Phone edition</a>...
 <br><br>
-<a href="content.asp?contentid=2731">Getting the most from your Palm</a>...
+<a href="content.asp?contentid=3388">Controlling desktop media playback from your Pocket PC</a>...
+<br><br>
+<a href="content.asp?contentid=3163">Bluetooth ActiveSync Guide for Windows XP Service Pack 2</a>...
 <br><br>
 
 </td>
@@ -275,13 +340,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <tr>
 <td class="dataTD">
-<a href="content.asp?contentid=2877">PocketBreeze for Pocket PC review</a>...
+<a href="content.asp?contentid=3730">iGo Pitch Duo review</a>...
 <br><br>
-<a href="content.asp?contentid=2867">Boxwave miniSync review</a>...
+<a href="content.asp?contentid=3727">Championship Five Hundred for Palm OS review</a>...
 <br><br>
-<a href="content.asp?contentid=2860">Sony Clie TH55 review</a>...
+<a href="content.asp?contentid=3705">Harrier Pocket PC Phone Edition review</a>...
 <br><br>
-<a href="content.asp?contentid=2849">GoToMyPC for Pocket PC review</a>...
+<a href="content.asp?contentid=3679">TripTracker for Pocket PC review</a>...
+<br><br>
+<a href="content.asp?contentid=3651">Pocket Hack Master 2004 review</a>...
 <br><br>
 
 </td>
@@ -292,34 +359,63 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 		</td>
 	</tr>	
 <!-- End other items -->
+<!-- Google Ads -->
+	<tr>
+		<td colspan="3">
+			<br>
+		</td>
+	</tr>
+	<tr>
+		<td class="dataTD" colspan="3">
+
+<script type="text/javascript"><!--
+google_ad_client = "pub-3841542980804279";
+google_alternate_ad_url = "http://www.geekzone.co.nz/google_adsense_script.html";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_channel ="8840426456";
+google_ad_type = "text";
+google_color_border = "EFEFEF";
+google_color_bg = "EFEFEF";
+google_color_link = "000099";
+google_color_url = "000099";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+		</td>
+	</tr>
+<!-- End Google -->
 <!-- Comments -->
-		<tr>
-			<td colspan="3">
-				<br>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="3">
-				<table>
-					<tbody><tr>
-						<td class="headerTD">
-							<a name="comments"></a>
-							<img src="/images/headings/comments.gif">
-						</td>
-					</tr>
-					<tr>
-						<td class="dataTD">
+	<tr>
+		<td colspan="3">
+			<br>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
+			<table>
+				<tbody><tr>
+					<td class="headerTD">
+						<a name="comments"></a>
+						<img src="/images/headings/comments.gif">
+					</td>
+				</tr>
+				<tr>
+					<td class="dataTD">
 
 								<br>
 
 									Sorry, this item does not accept comments.
 
-								<br>
-							</td>
-						</tr>
-				</tbody></table>
-			</td>
-		</tr>
+							<br>
+						</td>
+					</tr>
+			</tbody></table>
+		</td>
+	</tr>
 <!-- End Comments -->
 </tbody></table>
 </td>
@@ -336,11 +432,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 		<td>
 		</td>
 		<td width="35%" valign="bottom" align="right">
-			RSS feed available <a href="geekzone_rss.asp"><img src="/images/rss.gif"></a>
+			<a href="geekzone_rss.asp"><img src="/images/rss.gif" alt="RSS feed available"></a>
 			<br>
-			Page created in 140 ms.<br>
+			<a href="click_thru_banner.asp?banner_id=235"><img src="/images/my.gif" alt="Click here to add the Geekzone news feed to My Yahoo!"></a>
+			<br>
+			Page created in 47 ms.<br>
 			<a href="content.asp?contentid=684">Copyright</a> ©2002-2004 Geekzone<br>
 			Development by <a href="http://www.sohosolutions.co.nz">SohoSolutions</a>
+			<br>
+			Server monitor by <a href="click_thru_banner.asp?banner_id=237" target="_blank">WebMonitor</a>
 			<br>
 			
 			<script type="text/javascript" language="JavaScript">var site="s16geekzone"</script>
