--- a/f/fl/fla/flagsimporter.com.html
+++ b/f/fl/fla/flagsimporter.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the flagsimporter.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605153301id_/http%3A//www.flagsimporter.com/www/policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flagsimporter.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204195747id_/http%3A//www.flagsimporter.com/www/policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
-	<title>FlagsImporter.com-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Marijuana Flags,Germas Flags,Operation Iraqi Freedom</title>
+	<title>FlagsImporter.com-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Germany Flag,War / Peace Flags,Religious Flags,Others Flags,Solid Color Flags,Banners,Latin American,Car Magnets &amp; Banners,Historical Flags</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="keywords" content="FlagsImporter.com Flags importer, U.S. Flags, Latin American Flags, Car Flags, Sign Flags, Checkered Flags, Hand Flags,   Argentina, brazil, Columbia, Costa Rica, Cuba, Ecuador, El Salvador, Guatemala, Honduras, Mexico, Nicaragua, Panama, Peru, Puerto Rico, Uruguay, Venezuelan, Car Wash, Fast Oil Change, Furniture, Grand Opening, Open, Sale, Smog Check, Tacos, Tires, Trucks, Used Cars, Used Tires, We Finance, Welcome, Yard Sale.-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Marijuana Flags,Germas Flags,Operation Iraqi Freedom">
-	<meta name="description" content="FlagsImporter.com Flags manufacture in China. And flags importer in U.S.A. Wholesale and retail also accept custom designs. Best prices and quality.-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Marijuana Flags,Germas Flags,Operation Iraqi Freedom">
+	<meta name="keywords" content="FlagsImporter.com Flags importer, U.S. Flags, Latin American Flags, Car Flags, Sign Flags, Checkered Flags, Hand Flags,   Argentina, brazil, Columbia, Costa Rica, Cuba, Ecuador, El Salvador, Guatemala, Honduras, Mexico, Nicaragua, Panama, Peru, Puerto Rico, Uruguay, Venezuelan, Car Wash, Fast Oil Change, Furniture, Grand Opening, Open, Sale, Smog Check, Tacos, Tires, Trucks, Used Cars, Used Tires, We Finance, Welcome, Yard Sale.-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Germany Flag,War / Peace Flags,Religious Flags,Others Flags,Solid Color Flags,Banners,Latin American,Car Magnets &amp; Banners,Historical Flags">
+	<meta name="description" content="FlagsImporter.com Flags manufacture in China. And flags importer in U.S.A. Wholesale and retail also accept custom designs. Best prices and quality.-Car Flags,Message Flags,Checkered Flags,Hand Flags,Military Flags,State Flags,Country Flags,Rebel Flags,Pirate Flags,Germany Flag,War / Peace Flags,Religious Flags,Others Flags,Solid Color Flags,Banners,Latin American,Car Magnets &amp; Banners,Historical Flags">
 	<link href="../style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -22,7 +22,7 @@
 				 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 				  <form method="post" action="http://www.flagsimporter.com/www/search.asp" name="searchform"></form>
 					<tbody><tr>
-					  <td width="99%" class="smallfont">&nbsp;&nbsp;<strong>June&nbsp;5&nbsp;,&nbsp;2004&nbsp;</strong></td>
+					  <td width="99%" class="smallfont">&nbsp;&nbsp;<strong>December&nbsp;4&nbsp;,&nbsp;2004&nbsp;</strong></td>
 					  <td width="1"><a href="http://www.flagsimporter.com/www/shoppingcart.asp"><img src="../Images/shoppingcart.gif" width="117" height="29" border="0"></a></td>
 					  <td width="1"><img src="../Images/transparent.gif" width="18" height="1"></td>
 					  <td width="1"><img src="../Images/search.gif" width="45" height="29"></td>
@@ -135,37 +135,22 @@
     <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
     <td colspan="2">
 	  
-	  <strong><a href="Products.asp?cid=87">State Flags</a></strong>
-	  
-	  </td>
-  </tr>
-  
-  <tr>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-  </tr>
-  
-  <tr>
-    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
-    <td colspan="2">
-	  
-	  <strong><a href="Products.asp?cid=84">Checkered Flags</a></strong>
-	  
-	  </td>
-  </tr>
-  
-  <tr>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-  </tr>
-  
-  <tr>
-    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
-    <td colspan="2">
-	  
 	  <strong><a href="Products.asp?cid=89">Country Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=87">State Flags</a></strong>
 	  
 	  </td>
   </tr>
@@ -195,7 +180,7 @@
     <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
     <td colspan="2">
 	  
-	  <strong><a href="Products.asp?cid=104">Operation Iraqi Freedom</a></strong>
+	  <strong><a href="Products.asp?cid=110">Latin American</a></strong>
 	  
 	  </td>
   </tr>
@@ -225,7 +210,7 @@
     <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
     <td colspan="2">
 	  
-	  <strong><a href="Products.asp?cid=82">Car Flags</a></strong>
+	  <strong><a href="Products.asp?cid=112">Historical Flags</a></strong>
 	  
 	  </td>
   </tr>
@@ -240,7 +225,7 @@
     <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
     <td colspan="2">
 	  
-	  <strong><a href="Products.asp?cid=91">Pirate Flags</a></strong>
+	  <strong><a href="Products.asp?cid=84">Checkered Flags</a></strong>
 	  
 	  </td>
   </tr>
@@ -270,37 +255,112 @@
     <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
     <td colspan="2">
 	  
+	  <strong><a href="Products.asp?cid=91">Pirate Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=106">Religious Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=108">Solid Color Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=107">Others Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=82">Car Flags</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=111">Car Magnets &amp; Banners</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
+	  <strong><a href="Products.asp?cid=92">Germany Flag</a></strong>
+	  
+	  </td>
+  </tr>
+  
+  <tr>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
+  </tr>
+  
+  <tr>
+    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
+    <td colspan="2">
+	  
 	  <strong><a href="Products.asp?cid=85">Hand Flags</a></strong>
-	  
-	  </td>
-  </tr>
-  
-  <tr>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-  </tr>
-  
-  <tr>
-    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
-    <td colspan="2">
-	  
-	  <strong><a href="Products.asp?cid=103">Germas Flags</a></strong>
-	  
-	  </td>
-  </tr>
-  
-  <tr>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-    <td><img src="../Images/transparent.gif" width="1" height="4"></td>
-  </tr>
-  
-  <tr>
-    <td width="1%" valign="top"><img src="../Images/arrow0.gif" width="12" height="12"></td>
-    <td colspan="2">
-	  
-	  <strong><a href="Products.asp?cid=92">Marijuana Flags</a></strong>
 	  
 	  </td>
   </tr>
