--- a/f/fl/fly/flychina.com.html
+++ b/f/fl/fly/flychina.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flychina.com privacy policy that was archived on 2004-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040409081725id_/http%3A//www.flychina.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flychina.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204201934id_/http%3A//www.flychina.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
   <title>FlyChina Privacy Statement</title>
@@ -121,9 +121,9 @@ dateText=monthText+" "+date+", "+year;
   <area shape="poly" coords="104,0,120,16,299,16,283,0" href="/desk.htm" alt="Low Fare Wizard">
   <area shape="poly" coords="0,0,16,16,116,16,100,0" href="/" alt="Home">
 </map>
-<!--center>
-<font face="Arial" size="4"><b>800-318-1363&nbsp;&nbsp;&middot;&nbsp;&nbsp;954-233-0680&nbsp;&nbsp;&middot;&nbsp;&nbsp;&nbsp;fax&nbsp;&nbsp;954-233-0670</b></font>
-</center-->
+<center>
+<font face="Arial" size="4"><b>800-318-1363&nbsp;&nbsp;·&nbsp;&nbsp;954-233-0680&nbsp;&nbsp;·&nbsp;&nbsp;&nbsp;fax&nbsp;&nbsp;954-233-0670</b></font>
+</center>
 </td>
         </tr>
       </tbody></table>
@@ -291,6 +291,7 @@ dateText=monthText+" "+date+", "+year;
 
 </td></tr></tbody></table>
 <br>
+
 <center><br>
 <a href="http://www.bbbonline.org/cks.asp?id=10311047521236836" target="_blank"><img src="/images/reliabilityseal3.gif" alt="BBB Online Reliability Seal" border="0"></a>
 </center>
